# grpc-java

./: WORKSPACE  java_grpc_aspect.bzl  repositories.bzl
java_grpc_library/: BUILD.bazel  compiler.bzl  def.bzl
platform/: BUILD.bazel
toolchain/: BUILD.bazel  java_grpc.bzl  toolchains.bzl
